# vpn_sell

./: .env.example  .gitignore  README.md  docker-compose.yml
docs/: current_client_map.md  refactor_entrypoints.md  service_dependencies.md  stub_architecture.md
docs/contracts/: admin_to_internal_services.md  api_gateway_billing_service.md  api_gateway_user_service.md  api_gateway_vpn_service.md  billing_to_vpn_service.md  billing_to_yookassa.md  bot_to_api_gateway.md  contract_gaps.md  vpn_to_3xui.md
docs/examples/: billing_stub_flow.md  user_stub_flow.md
infra/prometheus/: prometheus.yml
old_bot/: main.py  settings.py
old_bot/handlers/: __init__.py  instructions.py  payments.py  plans.py  referral.py  start.py  subscription.py  support.py  terms.py
old_bot/keyboards/: __init__.py  common.py  payments.py  plans.py  referral.py  support.py  terms.py
old_bot/routers/: __init__.py  public.py
old_bot/texts/: __init__.py  access.py  instructions.py  locations.py  payments.py  referral.py  start.py  (+2 more)
shared/: pyproject.toml
shared/shared/: compat.py  config.py  database.py  exceptions.py  health.py  logging.py  metrics.py  repository.py  service_auth.py
shared/shared/clients/: base.py  billing.py  user.py  vpn.py
shared/shared/protocols/: __init__.py  billing.py  gateway.py  payment.py  user.py  vpn.py
shared/shared/schemas/: order.py  plan.py  subscription.py  user.py  vpn_access.py
shared/shared/stubs/: __init__.py  billing.py  fixtures.py  gateway.py  user.py  vpn.py  yookassa.py
tests/: test_billing_stub_chain.py  test_user_stub_chain.py
(+118 files in other folders)
